Fixed the alignment of the images

--- a/scss/_mastheader.scss
+++ b/scss/_mastheader.scss
@@ -47,6 +47,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  justify-content: space-between;
 }
 
 .images_container::-webkit-scrollbar {
